--- a/Dispatching/Views/SaltOrder/SaltOrderListWithDelete.cshtml
+++ b/Dispatching/Views/SaltOrder/SaltOrderListWithDelete.cshtml
@@ -88,8 +88,8 @@
                                 .Text("现金")
                                 .Value("现金"),
                             F.ListItem()
-                                .Text("压批")
-                                .Value("压批")
+                                .Text("押批")
+                                .Value("押批")
                     )
                 ),
             F.FormRow()
