--- a/Dispatching/Views/SaltOrder/SaltOrderDetail.cshtml
+++ b/Dispatching/Views/SaltOrder/SaltOrderDetail.cshtml
@@ -43,7 +43,7 @@
                     .Hidden(true),
                 F.RenderField()
                     .ColumnID("GoodsName")
-                    .DataField("Goods.Name")
+                    .DataField("SaltGoods.Name")
                     .HeaderText("名称"),
                 F.RenderField()
                     .ColumnID("CountPrice")
