--- a/Dispatching/Views/Mobile/TerminalAnalysis.cshtml
+++ b/Dispatching/Views/Mobile/TerminalAnalysis.cshtml
@@ -98,6 +98,24 @@
                     </form>
                 </div>
 
+                <div class="content-block-title">压箱套详情</div>
+                <div class="list-block">
+                    <ul>
+                        @foreach (KeyValuePair<string, int> d in ViewBag.WapperCountDic)
+                        {
+                            <li class="item-content">
+                                <div class="item-media"><i class="icon icon-f7"></i></div>
+                                <div class="item-inner">
+                                    <div class="item-title">@d.Key</div>
+                                    <div class="item-after">@d.Value &nbsp;&nbsp;个</div>
+                                </div>
+                            </li>
+                        }
+
+
+                    </ul>
+                </div>
+
                 <div class="content-block-title">总订单数量</div>
                 <div class="list-block">
                     <ul>
@@ -132,27 +150,29 @@
                     </ul>
                 </div>
 
-                @foreach(var uog in ts.UserOrderGoodsList)
-                { 
-                <div class="content-block-title">@uog.GoodsName</div>
-                <div class="list-block">
-                    <ul>
-                        <li class="item-content">
-                            <div class="item-media"><i class="icon icon-f7"></i></div>
-                            <div class="item-inner">
-                                <div class="item-title">商品数量</div>
-                                <div class="item-after">@uog.Count &nbsp;&nbsp;箱</div>
-                            </div>
-                        </li>
-                        <li class="item-content">
-                            <div class="item-media"><i class="icon icon-f7"></i></div>
-                            <div class="item-inner">
-                                <div class="item-title">总价</div>
-                                <div class="item-after">@uog.CountPrice &nbsp;&nbsp;元</div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
+
+
+                @foreach (var uog in ts.UserOrderGoodsList)
+                {
+                    <div class="content-block-title">@uog.GoodsName</div>
+                    <div class="list-block">
+                        <ul>
+                            <li class="item-content">
+                                <div class="item-media"><i class="icon icon-f7"></i></div>
+                                <div class="item-inner">
+                                    <div class="item-title">商品数量</div>
+                                    <div class="item-after">@uog.Count &nbsp;&nbsp;箱</div>
+                                </div>
+                            </li>
+                            <li class="item-content">
+                                <div class="item-media"><i class="icon icon-f7"></i></div>
+                                <div class="item-inner">
+                                    <div class="item-title">总价</div>
+                                    <div class="item-after">@uog.CountPrice &nbsp;&nbsp;元</div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 }
 
             </div>
