--- a/Dispatching/Views/Order/OrderDetail.cshtml
+++ b/Dispatching/Views/Order/OrderDetail.cshtml
@@ -11,7 +11,7 @@
 
 
 @section body {
-    @{ 
+    @{
         int id = ViewBag.ID;
     }
 
@@ -33,7 +33,7 @@
             .AllowPaging(true)
             .PageSize(10)
             .IsDatabasePaging(true)
-            .OnPageIndexChanged(Url.Action("OrderDetail_PageIndexChanged"), "Grid1",new Parameter("id",id.ToString()))
+            .OnPageIndexChanged(Url.Action("OrderDetail_PageIndexChanged"), "Grid1", new Parameter("id", id.ToString()))
             .Columns(
                 F.RowNumberField(),
                 F.RenderField()
@@ -68,11 +68,64 @@
             .ShowPagingMessage(true)
     )
 
+    @(F.Grid()
+            .ID("Grid2")
+            .ShowBorder(true)
+            .ShowHeader(true)
+            .Title("箱套详情")
+            .EnableCollapse(false)
+            .Layout(LayoutType.VBox)
+            .Height(500)
+            .BoxConfigChildMargin("0 0 5 0")
+            .BodyPadding(5)
+            .DataIDField("ID")
+            .DataTextField("Name")
+            //.AllowCellEditing(true)
+            //.ClicksToEdit(2)
+            .EnableCheckBoxSelect(true)
+            .AllowPaging(true)
+            .PageSize(10)
+            .IsDatabasePaging(true)
+            .OnPageIndexChanged(Url.Action("OrderDetail2_PageIndexChanged"), "Grid2", new Parameter("id", id.ToString()))
+            .Columns(
+                F.RowNumberField(),
+                F.RenderField()
+                    .ColumnID("ID")
+                    .DataField("ID")
+                    .HeaderText("ID")
+                    .Hidden(true),
+                F.RenderField()
+                    .ColumnID("WapperName")
+                    .DataField("Wapper.Name")
+                    .HeaderText("名称"),
+                F.RenderField()
+                    .ColumnID("CountPrice")
+                    .DataField("CountPrice")
+                    .HeaderText("单项总价"),
+                F.RenderField()
+                    .ColumnID("Count")
+                    .DataField("Count")
+                    .HeaderText("单项数量"),
+                F.RenderField()
+                    .ColumnID("CreateTime")
+                    .DataField("CreateTime")
+                    .HeaderText("创建时间")
+                    .Width(200)
+                    .FieldType(FieldType.Date)
+                    .Renderer(Renderer.Date)
+                    .RendererArgument("yyyy-MM-dd HH:mm:ss")
+
+            )
+            .RecordCount(ViewBag.Grid2RecordCount)
+            .DataSource(ViewBag.Grid2DataSource)
+            .ShowPagingMessage(true)
+    )
+
 }
 
 @section script {
     <script>
-        
+
 
     </script>
 }
